Reestruturação do script do banco e da entidade usuario.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=especificacoes
-spring.datasource.url=jdbc:postgresql://localhost:5432/jotanunes
+spring.datasource.url=jdbc:postgresql://localhost:5432/jotanunesdb
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
