--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,13 @@ spring:
         username: ${DB_USERNAME}
         password: ${DB_PASSWORD}
     jpa:
-      hibernate:
-          ddl-auto: none
+        properties:
+            hibernate:
+                ddl-auto: none
+                jdbc:
+                    batch_size: 50
+                order_inserts: true
+                order_updates: true
     flyway:
         enabled: true
         baseline-on-migrate: true
