--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,7 +29,8 @@ spring:
     jpa:
         properties:
             hibernate:
-                ddl-auto: update
+                ddl-auto: validate
     flyway:
-        enabled: false
+        enabled: true
+        clean-disabled: false
 
